client/style.css
/* ... */
#loading-progress {
    position: absolute;
    top: calc(100vh - 200px);
    left: calc(50vw - 200px);
    width: 400px;
    height: 30px;
    border: 2px solid white;
    display: flex;
    align-items: center;
    justify-content: center;
    /* --progress: attr(data-progress, 0%); */
    --loaded: attr(data-loaded, '0');
    --total: attr(data-total, '?');
}

/* #loading-progress::before { */
#loading-bg {
    position: absolute;
    /* width: var(--progress); */
    left: 0;
    top: 0;
    bottom: 0;
    content: '';
    background-color: white;
}

#loading-positive {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    /* width: calc(100% - var(--progress)); */
    /* width: 100%; */
    overflow: hidden;
}
#loading-negative {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    /* width: 100%; */
    /* width: var(--progress); */
    overflow: hidden;
}

#loading-positive::after {
    content: 'Loading... ' var(--loaded) ' / ' var(--total) ' bytes';
    color: white;
    font-family: 'Comic Relief';
    width: 400px;
    height: 100%;
    position: absolute;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}
#loading-negative::after {
    content: 'Loading... ' var(--loaded) ' / ' var(--total) ' bytes';
    color: black;
    font-family: 'Comic Relief';
    width: 400px;
    height: 100%;
    position: absolute;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

#loading-progress[data-done="true"] {
    display: none;
}

#loading input {
    visibility: hidden;
}

#loading label {
    display: none;
    color: #000000;
    font-size: 60px;
    position: absolute;
    top: calc(100vh - 200px);
    text-align: center;
    width: 100%;
}

#loading:has(#loading-progress[data-done="true"]) label {
    display: block;
}

#loading label:hover {
    color: #ffbe00;
    cursor: pointer;
}

#start {
    display: flex;
    flex-direction: column;
    background-color: #ffbe00;
    padding: 10px 60px 60px;
    box-sizing: content-box;
    margin-left: -30px;
    width: calc(100% - 60px);
    height: calc(100% - 60px);
    box-shadow: inset -6px -5px 3px 4px rgb(0 81 112 / 64%), inset -5px -4px 14px 10px rgb(223 223 223 / 57%), inset 0px -1px 4px 6px rgb(255 246 185 / 81%);
    overflow: hidden;
}

#start .title {
    flex-grow: 0;
    font-family: "Meow Script", cursive;
    text-align: center;
    color: #ffbe00;
    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
    margin: 0.2em 0 0.8em;
}

.upper {
    flex-grow: 1;
    display: flex;
    flex-direction: row;
    flex-basis: 50%;
    min-height: 0;
    gap: 20px;
}

#graph-window {
    flex-grow: 1;
    flex-basis: 50%;
    height: 50%;
    min-height: 0;
    position: relative;
    overflow: hidden;
    border-top-left-radius: 60px;
    border-top-right-radius: 60px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;

    box-shadow: -6px -5px 3px 4px rgb(0 81 112 / 64%), -5px -4px 5px 11px rgb(80 62 0 / 31%), 0px -1px 0px 7px rgb(94 255 210 / 51%);

    margin-bottom: 60px;
}

#graph-window::after{
    box-shadow: 2px 2px 5px 6px inset #00000075;
    border-top-left-radius: 60px;
    border-top-right-radius: 60px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

#graph-container {
    display: flex;
    align-items: center;
    background-color: blue;
    overflow: auto;
    scrollbar-width: thin;
    width: 100%;
    height: 100%;
}

#graph {
    margin: 0 auto;
}

main {
    overflow: auto;
    height: 100%;
    scrollbar-width: thin;
    position: relative;
}

.main-window {
    width: 50%;
    margin-left: -40px;
    margin-bottom: -50px;
    position: relative;
    flex-grow: 1;
    min-width: 0;
    flex-basis: 70%;
}

#vm-area {
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: center;
    flex-grow: 1;
    min-width: 670px;
    flex-basis: 30%;

    box-shadow: -6px -5px 3px 4px rgb(112 87 0 / 64%), -5px -4px 5px 11px rgb(80 62 0 / 31%), 0px -1px 0px 7px rgb(255 238 94 / 51%), 3px 3px 3px 0px inset #000000a1, -3px -3px 5px 0px inset #00000045;
    border-radius: 20px;
    margin: 20px;
    margin-right: -20px;
    padding: 20px;
    background-color: #d9cfb4;
}

#vm {
    /* display: inline-block; */
    border-radius: 10px;
    box-shadow: -2px -2px 2px 1px #0000007a, 1px 2px 2px 2px #ffffff7a;
    background-color: black;
    padding: 0.5em;

    /* Hardcode size so it gets the right size before it has any content */
    /* min-width: 688px;
    min-height: 432px; */
    min-height: 0;
    flex-grow: 1;

    overflow: hidden;
}

#vm-time-machine-label {
    text-align: center;
    font-weight: normal;
    margin: 10px 0 0;
    text-transform: uppercase;
    letter-spacing: 0.5em;
    font-size: 0.8em;
    padding: 0.2em 0;
    background-color: #585858;
    color: white;
    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
    box-shadow: -2px -2px 2px 0px inset #00000059, 2px 2px 0px 0px inset #ffffffb8, 0 0 10px inset black;
    font-family: "Instrument Serif", serif;
}

#vm-button-tray {
    display: flex;
    background-color: #131313;
    padding: 0 0 4px;
    border-bottom-left-radius: 7px;
    border-bottom-right-radius: 7px;
    gap: 1px;
    flex-wrap: wrap;
}

#vm-button-tray input {
    width: 0;
    margin: 0;
}
/* ... */

